Playwright/JiraConnectionConfig.json

--- a/Playwright/DataConfigCreateFile.json
+++ b/Playwright/DataConfigCreateFile.json
@@ -146,9 +146,5 @@
     }
   ],
   "eloTasks": [],
-  "eloDeletes": [],
-  "eloForwardWorkflow": {
-    "toNodesName": []
-  },
-  "eloRfs": []
+  "eloDeletes": []
 }
