--- a/Playwright/DataConfigCreateFilesAmelie.json
+++ b/Playwright/DataConfigCreateFilesAmelie.json
@@ -728,9 +728,5 @@
     }
   ],
   "eloTasks": [],
-  "eloDeletes": [],
-  "eloForwardWorkflow": {
-    "toNodesName": []
-  },
-  "eloRfs": []
+  "eloDeletes": []
 }
