--- a/Playwright/DataConfigQSBSHR50.json
+++ b/Playwright/DataConfigQSBSHR50.json
@@ -282,9 +282,5 @@
     }
   ],
   "eloTasks": [],
-  "eloDeletes": [],
-  "eloForwardWorkflow": {
-    "toNodesName": []
-  },
-  "eloRfs": []
+  "eloDeletes": []
 }
