--- a/Playwright/DataConfigQSBSHR51.json
+++ b/Playwright/DataConfigQSBSHR51.json
@@ -444,9 +444,5 @@
     }
   ],
   "eloTasks": [],
-  "eloDeletes": [],
-  "eloForwardWorkflow": {
-    "toNodesName": []
-  },
-  "eloRfs": []
+  "eloDeletes": []
 }
