--- a/Playwright/DataConfigQSBSHR52.json
+++ b/Playwright/DataConfigQSBSHR52.json
@@ -49,9 +49,5 @@
     }
   ],
   "eloTasks": [],
-  "eloDeletes": [],
-  "eloForwardWorkflow": {
-    "toNodesName": []
-  },
-  "eloRfs": []
+  "eloDeletes": []
 }
