--- a/Playwright/DataConfigQSBSHR54.json
+++ b/Playwright/DataConfigQSBSHR54.json
@@ -49,9 +49,5 @@
       "selectedButton": "SAVE"
     }
   ],
-  "eloDeletes": [],
-  "eloForwardWorkflow": {
-    "toNodesName": []
-  },
-  "eloRfs": []
+  "eloDeletes": []
 }
