--- a/Playwright/DataConfigQSBSHR58.json
+++ b/Playwright/DataConfigQSBSHR58.json
@@ -125,9 +125,5 @@
     }
   ],
   "eloTasks": [],
-  "eloDeletes": [],
-  "eloForwardWorkflow": {
-    "toNodesName": []
-  },
-  "eloRfs": []
+  "eloDeletes": []
 }
