--- a/Playwright/DataConfigStartOffBoarding.json
+++ b/Playwright/DataConfigStartOffBoarding.json
@@ -96,9 +96,5 @@
     }
   ],
   "eloTasks": [],
-  "eloDeletes": [],
-  "eloForwardWorkflow": {
-    "toNodesName": []
-  },
-  "eloRfs": []
+  "eloDeletes": []
 }
