--- a/Playwright/DataConfigStartOnBoarding.json
+++ b/Playwright/DataConfigStartOnBoarding.json
@@ -87,17 +87,5 @@
     }
   ],
   "eloTasks": [],
-  "eloDeletes": [],
-  "eloForwardWorkflow": {
-    "toNodesName": [
-      "sol.common.wf.node.ok",
-      "sol.common.wf.node.approve"
-    ]
-  },
-  "eloRfs": [
-    {
-      "funcName": "RF_sol_common_service_ExecuteAsAction",
-      "jsonParam": "{ \"action\": \"sol.hr.PersonnelFileReminder\", \"config\": {} }"
-    }
-  ]
+  "eloDeletes": []
 }
