Playwright/JiraScripts/Gen1/hr/JiraConnectionConfig.json

--- a/Playwright/PlaywrightConfig.json
+++ b/Playwright/PlaywrightConfig.json
@@ -1,8 +1,8 @@
 {
-  "notHeadless": true,
+  "notHeadless": false,
   "recordVideo": true,
   "screenShots": true,
   "snapShots": true,
   "sources": true,
-  "pause": true
+  "pause": false
 }
