--- a/Playwright/JiraScripts/Gen1/meeting/JiraConnectionConfig.json
+++ b/Playwright/JiraScripts/Gen1/meeting/JiraConnectionConfig.json
@@ -10,6 +10,7 @@
   },
   "eloSolution": {
     "eloControls": {},
+    "eloTables": {},
     "eloPrecondition": {
       "eloUsers": [],
       "eloTemplates": []
