--- a/Playwright/JiraScripts/Gen1/contact/JiraConnectionConfig.json
+++ b/Playwright/JiraScripts/Gen1/contact/JiraConnectionConfig.json
@@ -275,6 +275,7 @@
         "operator": "NONE"
       }
     },
+    "eloTables": {},
     "eloPrecondition": {
       "eloUsers": [],
       "eloTemplates": []
